--- a/Delta/day8/style.css
+++ b/Delta/day8/style.css
@@ -1,10 +1,16 @@
-div {
-    width: 100px;
-    height: 100px;
-    background-color: lightblue;
-    transition: transform 0.5s;
+body{
+    background-color: blanchedalmond;
+
 }
 
-div:hover {
-    transform: rotate(45deg) scale(1.2);
+#MyList
+{
+    font-size: 30px;
+}
+#intro
+{
+    
+    font-size: 30px;
+    /* text-align: center; */
+
 }
